# anarci-rs

./: .gitignore  ANNOTATION_PLAN.md  BENCHMARKS.md  Cargo.toml  LEARNED_ENGINE_PLAN.md  LICENSE  NOTICE.md  PLAN.md  README.md  pyproject.toml
.cargo/: config.toml
crates/anarci-core/: Cargo.toml
crates/anarci-core/data/: germlines.json
crates/anarci-core/src/: align.rs  constants.rs  generated_constants.rs  germlines.rs  lib.rs  orchestrate.rs  regions.rs  simd_sw.rs  sw.rs  types.rs
crates/anarci-core/src/schemes/: ig.rs  mod.rs
crates/anarci-core/tests/: endtoend.rs  engine_parse.rs  germline_evalue.rs  golden.rs
crates/anarci-hmm/: Cargo.toml
crates/anarci-hmm/src/: lib.rs
crates/anarci-hmm/tests/: bench_stages.rs  parity.rs  smoke.rs  stress.rs
crates/anarci-py/: Cargo.toml
crates/anarci-py/src/: lib.rs
crates/hmmer-sys/: Cargo.toml  build.rs  wrapper.h
crates/hmmer-sys/src/: lib.rs
reference_data/dat/HMMs/: FEW.hmm  FEW.hmm.h3f  FEW.hmm.h3i  FEW.hmm.h3m  FEW.hmm.h3p
reference_data/ground_truth/: _summary.json  aho.json  chothia.json  imgt.json  kabat.json  martin.json  wolfguy.json
scripts/: benchmark.py  build_pan_hmm.py  capture_hsps.py  edge_cases.py  export_germlines.py  gen_constants.py  gen_endtoend.py  gen_golden.py  validate_germline.py  validate_pan.py
