[workspace]
resolver = "2"
members = ["crates/anarci-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["anarci-rs"]
repository = "https://github.com/anarci-rs/anarci-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
rayon = "1"
flate2 = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
