[package]
name = "anarci-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust core of anarci-rs: state vectors, numbering schemes, germline assignment"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
flate2 = { workspace = true }
