[package]
name = "hmmer-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Thin -sys FFI bindings to a vendored, statically linked HMMER 3.4 + Easel."
links = "hmmer"
build = "build.rs"

[lib]
name = "hmmer_sys"

[build-dependencies]
bindgen = "0.69"
