[package]
name = "hmmer-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Thin -sys FFI bindings to a statically linked HMMER 3.4 + Easel (fetched at build time)."
links = "hmmer"
build = "build.rs"

[lib]
name = "hmmer_sys"

[build-dependencies]
bindgen = "0.69"
sha2 = "0.10"
